--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,10 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <ul>
+      <li><a href="/posts/new">新建文章</a></li>
+      <li><a href="/api/posts">文章列表（json）</a></li>
+    </ul>
   </body>
 </html>
