--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
     <p>Welcome to <%= title %></p>
 
     <ul>
-      <li><a href="/posts/new">新建文章</a></li>
-      <li><a href="/api/posts">文章列表（json）</a></li>
+      <li><a href="/post/new">新建文章</a></li>
+      <li><a href="/api/post/list">文章列表（json）</a></li>
     </ul>
   </body>
 </html>
