--- a/views/posts_new.ejs
+++ b/views/posts_new.ejs
@@ -1,4 +1,4 @@
-<form method="post" action="/api/post/create">
+<form method="post" action="/api/post/update">
     标题：<br />
     <input type="text" name="title" required/><br />
     正文：<br />
